--- a/src/principalApp/Avaliacao2.fxml
+++ b/src/principalApp/Avaliacao2.fxml
@@ -11,7 +11,6 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -25,25 +24,9 @@
    <center>
       <HBox BorderPane.alignment="CENTER">
          <children>
-            <ScrollPane hbarPolicy="ALWAYS" maxHeight="500.0" maxWidth="500.0" prefHeight="400.0" prefWidth="300.0" vbarPolicy="ALWAYS">
-               <HBox.margin>
-                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-               </HBox.margin>
+            <ScrollPane fx:id="audioOri" hbarPolicy="ALWAYS" maxHeight="500.0" maxWidth="500.0" prefHeight="400.0" prefWidth="300.0" vbarPolicy="ALWAYS">
                <content>
-                  <AnchorPane>
-                     <children>
-                        <ImageView fx:id="imageOri" fitHeight="150.0" fitWidth="200.0" layoutX="-14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
-               </content>
-            </ScrollPane>
-            <ScrollPane hbarPolicy="ALWAYS" maxHeight="500.0" maxWidth="500.0" prefHeight="400.0" prefWidth="300.0" vbarPolicy="ALWAYS">
-               <content>
-                  <AnchorPane>
-                     <children>
-                        <ImageView fx:id="imagePro" fitHeight="150.0" fitWidth="200.0" layoutX="-14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                     </children>
-                  </AnchorPane>
+                  <AnchorPane />
                </content>
                <HBox.margin>
                   <Insets bottom="5.0" right="5.0" top="5.0" />
@@ -55,9 +38,9 @@
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
-          <Menu mnemonicParsing="false" text="Imagem">
+          <Menu mnemonicParsing="false" text="Arquivo">
             <items>
-              <MenuItem mnemonicParsing="false" onAction="#selecionaImagem" text="Adicionar imagem" />
+              <MenuItem mnemonicParsing="false" onAction="#selecionaImagem" text="Selecionar audio" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Ações">
